# MAX-Core

./: .gitignore  CMakeLists.txt  README.md
docs/: Derived-Parameter-Map-V1.1.md  MAX-Core-Auto-Test-Suite-V2.5-EN.md  MAX-Core-Code-Review-V2.5-EN.md  MAX-Core-Compliance-Matrix-V2.5-EN.md  MAX-Core-Design-Document-V2.5-EN.md  MAX-Core-Implementation-Document-V2.5-EN.md  MAX-Core-Integration-Validation-V2.5-EN.md  MAX-Core-Specification-V2.5-EN.md  MAX-Core-Static-Analysis-Report-V2.5-EN.md  MAX-Core-Theoretical-Validation-V2.5-EN.md
docs/archives/: Derived-Parameter-Map-V1.0.md  Flexion-Core-Architecture-&-Evolution-Log-V1.0-EN.md  Flexion-Core-Architecture-&-Evolution-Log-V1.1-EN.md  Flexion-Core-Architecture-&-Evolution-Log-V1.2-EN.md  Flexion-Core-MAX-Core-Design-Document-V1.0-EN.md  Flexion-Core-MAX-Core-Implementation-Document-V1.0-EN.md  Flexion-Core-MAX-Core-Specification-V1.0-EN.md  Flexion-Core-MAX-Research-Directive-V1.0-EN.md  Flexion-Core-RLA-V1.0-EN.md  MAX-Core-Compliance-Matrix-V2.5-EN-DRAFT.md  MAX-Core-Design-Document-V1.1-EN.md  MAX-Core-Design-Document-V2.0-EN.md  MAX-Core-Design-Document-V2.1-EN.md  MAX-Core-Design-Document-V2.2-EN.md  MAX-Core-Design-Document-V2.3-EN.md  MAX-Core-Design-Document-V2.4-EN.md  MAX-Core-Implementation-Document-V1.1-EN.md  MAX-Core-Implementation-Document-V2.0-EN.md  MAX-Core-Implementation-Document-V2.1-EN.md  MAX-Core-Implementation-Document-V2.2-EN.md  MAX-Core-Implementation-Document-V2.3-EN.md  MAX-Core-Implementation-Document-V2.4-EN.md  MAX-Core-Specification-V1.1-EN.md  MAX-Core-Specification-V2.0-EN.md  MAX-Core-Specification-V2.1-EN.md  MAX-Core-Specification-V2.2-EN.md  MAX-Core-Specification-V2.3-EN.md  MAX-Core-Specification-V2.4-EN.md  MAX-Core-Static-Analysis-Report-V2.5-EN-DRAFT.md  MAX-Telemetry-Schema-V1.0-EN.md
examples/: heatmap_exporter.cpp  pipeline_cpp.cpp  worldbank_pipeline.cpp
include/maxcore/: c_api.h  derived.h  maxcore.h  types.h
src/maxcore/: c_api.cpp  derived.cpp  maxcore.cpp
tests/: test_c_api_error_channel.cpp  test_c_api_parity.cpp  test_canonical.cpp  test_clamp_invariants.cpp  test_collapse.cpp  test_derived_consistency.cpp  test_determinism.cpp  test_dt_stability.cpp  test_init.cpp  test_initial_terminal.cpp  test_long_run_finite.cpp  test_norm_guard.cpp  test_params_reject.cpp  test_terminal_shortcircuit.cpp  test_validation.cpp
